@@ -43,6 +43,7 @@ Jump Start Changelog
 * Fixed: Post showcase and grid display for archives not always applying the correct posts per page amount from Theme Options.
 * Fixed: Funky display issue on WooCommerce product reviews.
 * Fixed: Shopping cart button not displaying with "Super User" and "Executive" theme bases, when header info is set to show "within header."
+* Fixed: Partner Logos slider stretching images 100% width of column.
 * Fixed: More minor RTL bug fixes.
     * Frontend post grid/showcase filtering and masonry now aligns correctly to the right.
     * Tabs and pills of Tabs element now align properly to right.
